Fixed widget toolbar buttons and job settings layout problem

--- a/public/css/addWidgetToolbar.css
+++ b/public/css/addWidgetToolbar.css
@@ -30,7 +30,7 @@
 }
 .bool-widget-btn-carousel>.bool-toolbar-options {
 
-    margin: 20px 0;
+    margin: 10px 0;
     border-top: 1px solid #7F7F80;;
 }
 .bool-more-options {
@@ -381,4 +381,8 @@ input.bool-option-search{
     -ms-transform: rotate(180deg);
     -o-transform: rotate(180deg);
     transform: rotate(180deg);
+}
+.bool-scrollable{
+    height: 100%;
+    min-height: 250px;
 }
